esent message store first integration test

--- a/Ui/Views/Home/Index.cshtml
+++ b/Ui/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="jumbotron">
-    <h1>Back Office Integration V2</h1>
+    <h1>Reliable SignalR Messaging</h1>
     <p class="lead">Submit a finance agreement to your back office system.</p>
 
     @using (Html.BeginForm("SubmitOnlineAgreement", "home", FormMethod.Post))
